# Auto_PAPER

./: .env.example  .gitignore  AI_writer.py  Auto_download.py  Auto_quote.py  Auto_search.py  DOWNLOAD_MODULE_NOTES.md  Literature_review.py  README.md  main.py  pyproject.toml
API_key/: key_manager.py
AutoPaper/: .env.example  __init__.py  main.py  pyproject.toml
AutoPaper/app/: __init__.py
AutoPaper/app/api/: __init__.py  search.py
AutoPaper/app/core/: config.py
AutoPaper/app/llm/: deepseek_client.py
AutoPaper/app/models/: paper.py  pipeline_result.py  query_plan.py  rewrite_result.py
AutoPaper/app/search/: __init__.py  arxiv.py  base.py  openalex.py
AutoPaper/app/services/: __init__.py  download.py  paper_merge.py  pipeline.py  query_planner.py  query_rewrite.py  rerank.py
PaperDownloader/: .env.example  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
PaperDownloader/examples/: __init__.py  basic_usage.py
PaperDownloader/paper_downloader/: __init__.py  api.py
PaperDownloader/paper_downloader/config/: __init__.py  settings.py
PaperDownloader/paper_downloader/downloader/: __init__.py  manager.py  pdf_downloader.py
PaperDownloader/paper_downloader/matcher/: __init__.py  title_matcher.py
PaperDownloader/paper_downloader/metadata/: __init__.py
PaperDownloader/paper_downloader/models/: __init__.py  paper.py
PaperDownloader/paper_downloader/providers/: __init__.py  arxiv.py  base.py  crossref.py  openalex.py  semantic_scholar.py  unpaywall.py
PaperDownloader/paper_downloader/storage/: __init__.py  cache.py  file_store.py
PaperDownloader/paper_downloader/utils/: __init__.py  hashing.py  logging.py
PaperDownloader/tests/: __init__.py  test_arxiv.py  test_crossref.py  test_matcher.py  test_models.py  test_openalex.py  test_semantic_scholar.py  test_storage.py  test_unpaywall.py
app/api/: schemas.py
app/core/: __init__.py
app/llm/: __init__.py  deepseek_client.py
app/models/: __init__.py  download_result.py  rank_result.py
app/search/: manager.py  semantic_scholar.py
app/services/: download.py  pipeline.py  query_planner.py  query_rewrite.py  rerank.py
app/utils/: __init__.py  logger.py
cache/: papers.db
examples/: __init__.py  app_download_service_test.py  async_usage.py  basic_usage.py  batch_download.py  download_diagnostic.py  integration_with_ai.py
paper_downloader/: __init__.py  main.py  requirements.txt
paper_downloader/config/: config.yaml
paper_downloader/src/: __init__.py  api.py  exceptions.py  interface.py  main.py  paper_downloader.py
paper_downloader/src/config/: __init__.py  config_manager.py
paper_downloader/src/core/: __init__.py  async_downloader.py  batch_processor.py  callback_manager.py  downloader.py  progress_tracker.py
paper_downloader/src/downloaders/: __init__.py  arxiv_downloader.py  base_downloader.py  download_manager.py  http_downloader.py  pdf_processor.py  source_resolver.py
paper_downloader/src/exceptions/: __init__.py  error_handler.py
paper_downloader/src/models/: __init__.py  paper.py
paper_downloader/src/monitoring/: __init__.py  health_check.py  metrics.py
paper_downloader/src/search_engines/: __init__.py  arxiv_search.py  base_search.py  crossref_search.py  google_scholar_search.py  openalex_search.py  search_factory.py  semantic_scholar_search.py
paper_downloader/src/utils/: __init__.py  logger.py  report_generator.py  validators.py
paper_downloader/tests/: __init__.py  conftest.py  test_async_batch.py  test_config_cache.py  test_core.py  test_downloaders.py  test_integration.py  test_interface.py  test_logging_monitoring.py  test_paper_downloader.py  test_search_engines.py  test_source_resolver.py
papers/: Smith_2024_Graph Attention Site Prediction (GrASP)_ Identifying Druggable Binding Sites Usi.bib  Smith_2024_Graph Attention Site Prediction (GrASP)_ Identifying Druggable Binding Sites Usi.json  paper_manager.py  papers_list.json
promopt/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
test_papers/: 2602.12346v2
tests/: __init__.py  test_arxiv.py  test_crossref.py  test_matcher.py  test_models.py  test_openalex.py  test_semantic_scholar.py  test_storage.py  test_unpaywall.py
