[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autopaper"
version = "0.2.0"
description = "学术论文自动化辅助工具 — 检索、分析、下载一站式。可作为 AI Agent/LLM 项目的论文获取组件。"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AutoPaper Team" }]
keywords = ["academic", "paper", "arxiv", "pdf", "download", "research", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

dependencies = [
    # HTTP & 解析
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "aiohttp>=3.9",

    # 配置 & 环境
    "python-dotenv>=1.0",
    "PyYAML>=6.0",

    # PDF 处理
    "PyPDF2>=3.0",

    # 进度条
    "tqdm>=4.66",

    # 学术数据源
    "arxiv>=2.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
# 完整安装: pip install -e ".[full]"
full = [
    "scholarly>=1.7",
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "loguru>=0.7",
    "python-Levenshtein>=0.25",
    "bibtexparser>=1.4",
    "aiofiles>=24.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/user/autopaper"
Documentation = "https://github.com/user/autopaper#readme"
Repository = "https://github.com/user/autopaper"
Issues = "https://github.com/user/autopaper/issues"

[project.scripts]
paper-downloader = "paper_downloader.src.main:main"
paper-dl = "paper_downloader.src.main:main"

[tool.setuptools.packages.find]
include = ["app", "app.*", "paper_downloader", "paper_downloader.*"]

# 包含非 Python 数据文件
[tool.setuptools.package-data]
paper_downloader = ["config/*.yaml", "config/*.example"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   "W",   "F",   "I",   "N",
    "B",   "C4",  "UP",  "ARG", "SIM",
    "TCH",
]
ignore = [
    "E501",
    "ARG002",
    "B904",
    "SIM105",
]

[tool.ruff.lint.isort]
known-first-party = ["paper_downloader", "app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "loguru.*", "tenacity.*", "tqdm.*",
    "bibtexparser.*", "aiofiles.*",
    "rapidfuzz.*", "Levenshtein.*",
    "arxiv.*", "scholarly.*", "aiohttp.*",
    "requests.*", "urllib3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: 慢速测试（需要网络连接）",
    "network: 需要真实网络连接的测试",
    "integration: 端到端集成测试",
]
addopts = "-v --tb=short --strict-markers --strict-config"

[tool.coverage.run]
source = ["paper_downloader", "app"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
